--- a/components/rentals/res_edit.jade
+++ b/components/rentals/res_edit.jade
@@ -15,27 +15,29 @@ template(name='reservation_edit')
                         strong #{rental.title}
                         small reservation
                     with rental
-                        .ui.header $#{hourly_dollars}
+                        .ui.inline.header $#{hourly_dollars}
                             small /hr
-                        .ui.header $#{daily_dollars}
+                        |&nbsp;
+                        |&nbsp;
+                        .ui.inline.header $#{daily_dollars}
                             small /day
                         +image_view key='image' label='image' direct=true classes='ui rounded image'
                         //- +number_view key='hourly_karma' label='hourly rate (karma)' icon='yin-yang' direct=true
                         //- +number_view key='daily_karma' label='daily rate (karma)' icon='yin-yang' direct=true
                 .column 
-                    //- a.ui.header(href="/rental/#{rental._id}/view") reserve #{rental.title}
-                    //- .ui.fluid.button.reserve_now(class=now_button_class)
-                    //-     +i name='present'
-                    //-     |reserve now
-                    //- unless now
-                    //-     +date_edit key='start_date' label='start date' icon='date-from' direct=true
-                    //-     +time_edit key='start_time' label='start time' icon='date-to' direct=true
-                    +datetime_edit key='start_datetime' label='start datetime' direct=true
-                    //- .ui.header 
-                    //-     +i name='date-to' classes='ui tiny inline image'
-                    //-     |duration
-                    +range_edit key='reservation_range' label='range' direct=true
-                    //- +boolean_edit key='daily_reservation' label='daily' icon='sun' direct=true
+                    a.ui.header(href="/rental/#{rental._id}/view") reserve #{rental.title}
+                    .ui.fluid.button.reserve_now(class=now_button_class)
+                        +i name='present'
+                        |reserve now
+                    unless now
+                        .ui.small.header start date/time
+                        .ui.input
+                            //- input.res_start(type='datetime-local' value=start_datetime)
+                            input.res_start(type='datetime-local' value="#{start_datetime}")
+                        //- +datetime_edit key='start_datetime' label='start datetime' direct=true
+                    .ui.header 
+                        +i name='date-to' classes='ui tiny inline image'
+                        |duration
                     //- .ui.compact.button.select_month(class=sel_month_class)
                     //-     +i name='calendar'
                     //-     |month
@@ -47,14 +49,13 @@ template(name='reservation_edit')
                     //-     |hour
                     div
                     //- if is_hour
-                    //- +number_view key='hourly_dollars' label='hourly rate ($)'
-                    //- +number_view key='hourly_karma' label='hourly rate (karma)'
                     //- .ui.button.set_1_hr 1 hr
                     //- +key_value_edit key='hour_duration' value=.5 label='1/2'
                     //- +key_value_edit key='hour_duration' value=1 label='1 hr'
                     //- +key_value_edit key='hour_duration' value=2 label='2 hrs'
                     //- +key_value_edit key='hour_duration' value=3 label='3 hrs'
-                    //- +number_edit key='hour_duration' label='other' direct=true
+                    .ui.input            
+                        input.other_hour(type='number' min='0' value=hour_duration autocomplete="off")
                     //- if is_day 
                     //-     +number_view key='daily_dollars' label='daily rate ($)'
                     //-     //- +number_view key='daily_karma' label='daily rate (karma)'
@@ -73,7 +74,9 @@ template(name='reservation_edit')
                     //-     +number_edit key='month_duration' label='other' direct=true
                     //- +date_edit key='end_date' label='end date' icon='date-to' direct=true
                     //- +time_edit key='end_time' label='end time' icon='time' direct=true
-                    +datetime_edit key='end_datetime' label='end datetime' direct=true
+                    .ui.small.header start date/time            
+                    .ui.input
+                        input.res_end(type='datetime-local' value="#{end_datetime}")
             
                     //- +key_value_edit key='minute_duration' value=30 label='1/2'
                     //- +key_value_edit key='minute_duration' value=60 label='1 hour'
@@ -87,36 +90,39 @@ template(name='reservation_edit')
                     .ui.header.lowercase 
                         small to
                         |{{cal_time end_datetime}}
-                    .ui.header #{hour_duration} hours
-                    .ui.fluid.button.calculate_diff
-                        |calculate money
                     .ui.header 
                         +i name='money' classes='ui tiny inline image'
-                        | #{hour_duration}hrs * $#{rental.hourly_dollars}/hr = $#{estimated_dollars}
+                        | #{hour_duration}
+                        small hrs * $
+                        |#{rental.hourly_dollars}
+                        small /hr = $
+                        |#{cost}
                     .ui.header 
                         +i name='payroll'
-                        small 50% owner payout 
-                        |$#{owner_payout}
+                        small 50% owner payout
+                        |$#{owner_payout} to #{rental.owner_username}
                     .ui.header 
                         +i name='get-cash'
-                        small 40% handler payout
-                        | $#{handler_payout}
+                        small 45% handler payout
+                        | $#{handler_payout} to #{rental.handler_username}
                     .ui.header 
                         +i name='tax'
-                        small taxes
+                        small 5% taxes
                         | $#{taxes_payout}
                     .ui.divider
-                    .ui.header 
+                    .ui.inline.header 
                         small your balance
                         +i name='cheap-2--v1' 
-                        |#{currentUser.credit} 
-                    .ui.header
-                        small reservation cost 
-                        |#{estimated_dollars} 
-                    .ui.header 
-                        small balance after purchase 
+                        |{{fixed currentUser.credit}} 
+                    .ui.inline.header
+                        small - 
+                        //- small reservation cost 
+                        |#{cost} 
+                    .ui.inline.header 
+                        small = 
+                        //- small balance after purchase 
                         +i name='cheap-2--v1' 
-                        |#{member_balance_after_reservation}
+                        |{{fixed member_balance_after_reservation}}
                         
                         
                     unless submitted
