--- a/client/grid.jade
+++ b/client/grid.jade
@@ -14,18 +14,18 @@ template(name='grid')
                     +grid_role_model
                 
 template(name='grid_role_model')
-    .ui.segment
-        a.ui.inline.capitalize.header(href="/m/#{slug}" tabindex="0")
+    a.ui.segment(href="/m/#{slug}" tabindex="0")
+        .ui.inline.capitalize.header
             +i name=icon classes='ui inline image'
             //- i.icon(class=icon)
             |#{title}
         //- i.grey.eye.icon
         //- i.grey.thumbs.up.icon
         //- i.grey.clock.icon
-        div
-        .ui.list
-            each model_docs
-                +model_list_item_view
+        //- div
+        //- .ui.list
+        //-     each model_docs
+        //-         +model_list_item_view
         //- span(title='views')
         //-     |#{views}
         if is_dev
