--- a/components/profile/member_sections.jade
+++ b/components/profile/member_sections.jade
@@ -5,14 +5,38 @@ template(name='member_info')
     +array_view key='tags' label='tags' icon='tags' direct=true
     +array_view key='location_tags' label='location tags' icon='location' direct=true
     +link_view key='link' label='link' icon='link' direct=true
+    div
     .ui.icon.button.refresh_member_stats
         i.refresh.icon
     .ui.header member activity
-    .ui.header #{service_count} member services
-    .ui.header #{product_count} member products
-    .ui.header #{comment_count} member comments
-    .ui.header #{rental_count} member rentals
-    .ui.header #{reservation_count} member reservations
+    .ui.header revenue calculator
+    with member_stats
+        .ui.small.header #{total_passive_potential} total passive potential
+        |if all of your rentals were reserved full time, without handling
+        .ui.header 
+            +i name='wrench'
+            |#{service_count} member services
+        .ui.header 
+            +i name='shopping-cart'
+            |#{product_count} member products
+        .ui.header 
+            +i name='chat'
+            |#{comment_count} member comments
+        .ui.header 
+            +i name='handshake'
+            |#{rental_count} member rentals
+        .ui.header 
+            +i name='handshake'
+            |#{owned_count} owned rentals
+        .ui.header 
+            +i name='money'
+            |#{total_hourly_credit} total combined hourly credit
+        .ui.header 
+            +i name='handshake'
+            |#{handled_count} handled rentals
+        .ui.header 
+            +i name='clock'
+            |#{reservation_count} reservations
     
 
 
