--- a/client/grid.jade
+++ b/client/grid.jade
@@ -14,8 +14,8 @@ template(name='grid')
                     +grid_role_model
                 
 template(name='grid_role_model')
-    a.ui.segment(href="/m/#{slug}" tabindex="0")
-        .ui.inline.capitalize.header
+    .ui.segment
+        a.ui.inline.capitalize.header(href="/m/#{slug}" tabindex="0")
             +i name=icon classes='ui inline image'
             //- i.icon(class=icon)
             |#{title}
@@ -23,9 +23,9 @@ template(name='grid_role_model')
         //- i.grey.thumbs.up.icon
         //- i.grey.clock.icon
         //- div
-        //- .ui.list
-        //-     each model_docs
-        //-         +model_list_item_view
+        .ui.list
+            each model_docs
+                +model_list_item_view
         //- span(title='views')
         //-     |#{views}
         if is_dev
