--- a/components/profile/member_profile.jade
+++ b/components/profile/member_profile.jade
@@ -33,12 +33,10 @@ template(name='member_profile_layout')
                     if is_current_user
                         a.ui.button.item(href="/member/#{user_from_username_param.username}/edit" title='profile settings')
                             +i name='settings' 
-                            //- i.cog.icon
                             |edit
                     else if is_admin
                         a.ui.button.item(href="/member/#{user_from_username_param.username}/edit" title='profile settings')
                             +i name='settings' 
-                            //- i.cog.icon
                             |edit
                     if is_dev
                         +boolean_edit key='disabled' label='disabled' icon='user shield' direct='true'
@@ -62,25 +60,25 @@ template(name='member_profile_layout')
                             each roles
                                 .ui.basic.label #{this}
                 .twelve.wide.column.shadowed-box
-                    a.ui.compact.button(href="/member/#{username}/info" class="{{isActiveRoute 'member_info'}}")
+                    a.ui.large.button(href="/member/#{username}/info" class="{{isActiveRoute 'member_info'}}")
                         +ismall name='info' classes='ui inline image'
                         |info
-                    a.ui.compact.button(href="/member/#{username}/social" class="{{isActiveRoute 'member_social'}}")
+                    a.ui.large.button(href="/member/#{username}/social" class="{{isActiveRoute 'member_social'}}")
                         +ismall name='collaboration' classes='ui inline image'
                         |social
-                    a.ui.compact.button(href="/member/#{username}/rentals" class="{{isActiveRoute 'member_rentals'}}")
+                    a.ui.large.button(href="/member/#{username}/rentals" class="{{isActiveRoute 'member_rentals'}}")
                         +ismall name='handshake' classes='ui inline image'
                         |rentals
-                    a.ui.compact.button(href="/member/#{username}/products" class="{{isActiveRoute 'member_products'}}")
+                    a.ui.large.button(href="/member/#{username}/products" class="{{isActiveRoute 'member_products'}}")
                         +ismall name='shopping-cart' classes='ui inline image'
                         |products
-                    a.ui.compact.button(href="/member/#{username}/reservations" class="{{isActiveRoute 'member_reservations'}}")
+                    a.ui.large.button(href="/member/#{username}/reservations" class="{{isActiveRoute 'member_reservations'}}")
                         +ismall name='clock' classes='ui inline image'
                         |reservations
-                    a.ui.compact.button(href="/member/#{username}/services" class="{{isActiveRoute 'member_services'}}")
+                    a.ui.large.button(href="/member/#{username}/services" class="{{isActiveRoute 'member_services'}}")
                         +ismall name='wrench' classes='ui inline image'
                         |services
-                    a.ui.compact.button(href="/member/#{username}/finance" class="{{isActiveRoute 'member_finance'}}")
+                    a.ui.large.button(href="/member/#{username}/finance" class="{{isActiveRoute 'member_finance'}}")
                         +ismall name='handshake' classes='ui inline image'
                         |finance
                     //- a.ui.compact.button(href="/member/#{username}/bookmarks" class="{{isActiveRoute 'member_bookmarks'}}")
