--- a/components/rentals/rental_edit.jade
+++ b/components/rentals/rental_edit.jade
@@ -12,7 +12,13 @@ template(name='rental_edit')
                         i.checkmark.large.green.icon
                         |save
                     +remove_button
-                    +text_edit key='_author_username' label='author username' direct=true
+                    +single_user_edit key='_author_username' label='author username' direct=true
+                    .ui.large.header 
+                        +i name='money'
+                        |finance
+                    +float_edit key='hourly_dollars' label='hourly rate ($)' icon='money' direct=true
+                    +float_edit key='daily_dollars' label='daily rate ($)' icon='money' direct=true
+            
                 .six.wide.column 
                     +text_edit key='title' direct=true
                     +image_edit key='image' label='image' direct=true
@@ -23,11 +29,6 @@ template(name='rental_edit')
                     +single_user_edit key='handler_username' label='handler' direct=true
                     +text_edit key='contact_info' label='contact info' icon='info' direct=true
                     +link_edit key='amazon_referral_link' label='amazon referral link' icon='amazon' direct=true
-                    .ui.large.header 
-                        +i name='money'
-                        |finance
-                    +float_edit key='hourly_dollars' label='hourly rate ($)' icon='money' direct=true
-                    +float_edit key='daily_dollars' label='daily rate ($)' icon='money' direct=true
                     div
                 .six.wide.column 
                     +array_edit key='availability_tags' label='availability tags' icon='clock' direct=true
